Added Rag pipeline gemini api and frontend changes